[package]
name = "rlcount"
version = "0.2.0"
authors = ["ElGusanitoPLAY <nyagouno@gmail.com>"]
edition = "2018"

description = "A tool to get info about project lines of code"
repository = "https://github.com/cdecompilador/rlcount.git"

readme = "README.md"
keywords = ["lines", "count", "repository", "git"]
license-file = "LICENSE"

[[bin]]
name = "rlcount"
path = "src/main.rs"
test = true
doc = false

[dependencies]
rayon = "1.5.0"
walkdir = "2.3.1"
regex = "1.4.5"
lazy_static = "1.4.0"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["suggestions", "color"]
